@@ -25,6 +25,11 @@ IN DEVELOPMENT
      removed use characters not supported in the terminal encoding.
      (Aaron Bentley)
 
+   * When dumb http servers returns whole files instead of the requested
+     ranges, read the remaining bytes by chunks to avoid overflowing network
+     buffers.
+     (Vincent Ladeuil, #175886)
+
   INTERNALS:
 
   API BREAKS:
